--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@ body{
 h1{
     font-size: 50px;
 }
-.orange-color{
-    color: orange;
+p{
+    color: #696969;
 }
-section{
+.orange-color{
+    color: #ffa500;
+}
+.flexible-container{
     display: flex;
     margin-bottom: 100px;
 }
@@ -35,7 +38,27 @@ section{
     background-image: url(images/dream-bg.png);
     background-position: right;
     background-repeat: no-repeat;
+    margin-bottom: 100px;
 }
 .dream-big p{
     padding-right: 80px;
+}
+.dream-big h1{
+    font-size: 40px;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-area h1{
+    font-size: 40px;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
 }
